--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background: linear-gradient(#cacaca, #839de1) ; 
+    background: linear-gradient(#cacaca, #22408c) ; 
 }
 
 header {
