--- a/css/style.css
+++ b/css/style.css
@@ -178,7 +178,7 @@ h2 {
     #easter_egg {
         position: relative;
         left: 1110px;
-        bottom: 10px;
+        top: 14px;
         margin: -30px;
         width: 100%;
         height: 100%;
